@@ -73,7 +73,6 @@ void Init_nokogiri()
   init_xml_comment();
   init_xml_node_set();
   init_xml_xpath_context();
-  init_xml_xpath();
   init_xml_sax_parser_context();
   init_xml_sax_parser();
   init_xml_sax_push_parser();
