@@ -15,6 +15,7 @@
   * XML::NodeSet#slice gracefully handles offset+length larger than the set length. GH #200
   * XML::Node#content= safely unlinks previous content. GH #203
   * XML::Node#namespace= takes nil as a parameter
+  * XML::Node#xpath returns things other than NodeSet objects. GH #208
 
 === 1.4.1 / 2009/12/10
 
